Cleaned up code. Fixed horizontal alignment for feed.

--- a/App/wwwroot/css/tailwind.output.css
+++ b/App/wwwroot/css/tailwind.output.css
@@ -1008,6 +1008,10 @@ video {
   width: 100%;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
